--- a/localisation/_RCE_ethiopia_rrp_l_english.yml
+++ b/localisation/_RCE_ethiopia_rrp_l_english.yml
@@ -105,79 +105,79 @@
  
  ETH_reclaimed_some_of_ethiopia_trigger:0 "Has reclaimed a portion of the §YOld Ethiopian Empire§!"
  ETH_form_ethiopia_decision:0 "Reestablish the Ethiopian Empire"
- ETH_reclaimed_gondor_trigger:0 "§Y[816.GetName]§! is owned or a subject of §![ROOT.GetName]§!"
- ETH_reclaimed_gibe_trigger:0 "§Y[820.GetName]§! is owned or a subject of §![ROOT.GetName]§!"
- ETH_reclaimed_oromia_trigger:0 "§Y[271.GetName]§! is owned or a subject of §![ROOT.GetName]§!"
- ETH_reclaimed_harar_trigger:0 "§Y[819.GetName]§! is owned or a subject of §![ROOT.GetName]§!"
- ETH_reclaimed_aussa_trigger:0 "§Y[818.GetName]§! is owned or a subject of §![ROOT.GetName]§!"
+#  ETH_reclaimed_gondor_trigger:0 "§Y[816.GetName]§! is owned or a subject of §![ROOT.GetName]§!"
+#  ETH_reclaimed_gibe_trigger:0 "§Y[820.GetName]§! is owned or a subject of §![ROOT.GetName]§!"
+#  ETH_reclaimed_oromia_trigger:0 "§Y[271.GetName]§! is owned or a subject of §![ROOT.GetName]§!"
+#  ETH_reclaimed_harar_trigger:0 "§Y[819.GetName]§! is owned or a subject of §![ROOT.GetName]§!"
+#  ETH_reclaimed_aussa_trigger:0 "§Y[818.GetName]§! is owned or a subject of §![ROOT.GetName]§!"
  
  ETH_declare_imperial_ambitions_decision:0 "Declare Ambitions for Ethiopia"
  ETH_ambitions_for_an_ethiopian_empire_tooltip:0 "§GWe shall declare our ambitions to reunite the§! §YEthiopian Empire§!§G!§!"
  
- ETH_unite_ethiopia_south_eritrea:0 "Conquer [815.GetName]"
- ETH_unite_ethiopia_south_eritrea_trigger:0 "Has a claim on §Y[815.GetName]§!"
- ETH_unite_ethiopia_south_eritrea_neighbor_trigger:0 "Any Owned State: neighbors §Y[815.GetName]§!"
- ETH_unite_ethiopia_south_eritrea_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[815.Owner.GetName]§!"
+#  ETH_unite_ethiopia_south_eritrea:0 "Conquer [815.GetName]"
+#  ETH_unite_ethiopia_south_eritrea_trigger:0 "Has a claim on §Y[815.GetName]§!"
+#  ETH_unite_ethiopia_south_eritrea_neighbor_trigger:0 "Any Owned State: neighbors §Y[815.GetName]§!"
+#  ETH_unite_ethiopia_south_eritrea_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[815.Owner.GetName]§!"
  
- ETH_unite_ethiopia_gondar:0 "Conquer [816.GetName]"
- ETH_unite_ethiopia_gondar_trigger:0 "Has a claim on §Y[816.GetName]§!"
- ETH_unite_ethiopia_gondar_neighbor_trigger:0 "Any Owned State: neighbors §Y[816.GetName]§!"
- ETH_unite_ethiopia_gondar_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[816.Owner.GetName]§!"
+#  ETH_unite_ethiopia_gondar:0 "Conquer [816.GetName]"
+#  ETH_unite_ethiopia_gondar_trigger:0 "Has a claim on §Y[816.GetName]§!"
+#  ETH_unite_ethiopia_gondar_neighbor_trigger:0 "Any Owned State: neighbors §Y[816.GetName]§!"
+#  ETH_unite_ethiopia_gondar_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[816.Owner.GetName]§!"
  
- ETH_unite_ethiopia_gedaref:0 "Conquer [817.GetName]"
- ETH_unite_ethiopia_gedaref_trigger:0 "Has a claim on §Y[817.GetName]§!"
- ETH_unite_ethiopia_gedaref_neighbor_trigger:0 "Any Owned State: neighbors §Y[817.GetName]§!"
- ETH_unite_ethiopia_gedaref_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[817.Owner.GetName]§!"
+#  ETH_unite_ethiopia_gedaref:0 "Conquer [817.GetName]"
+#  ETH_unite_ethiopia_gedaref_trigger:0 "Has a claim on §Y[817.GetName]§!"
+#  ETH_unite_ethiopia_gedaref_neighbor_trigger:0 "Any Owned State: neighbors §Y[817.GetName]§!"
+#  ETH_unite_ethiopia_gedaref_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[817.Owner.GetName]§!"
  
- ETH_unite_ethiopia_aussa:0 "Conquer [818.GetName]"
- ETH_unite_ethiopia_aussa_trigger:0 "Has a claim on §Y[818.GetName]§!"
- ETH_unite_ethiopia_aussa_neighbor_trigger:0 "Any Owned State: neighbors §Y[818.GetName]§!"
- ETH_unite_ethiopia_aussa_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[818.Owner.GetName]§!"
+#  ETH_unite_ethiopia_aussa:0 "Conquer [818.GetName]"
+#  ETH_unite_ethiopia_aussa_trigger:0 "Has a claim on §Y[818.GetName]§!"
+#  ETH_unite_ethiopia_aussa_neighbor_trigger:0 "Any Owned State: neighbors §Y[818.GetName]§!"
+#  ETH_unite_ethiopia_aussa_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[818.Owner.GetName]§!"
  
- ETH_unite_ethiopia_harar:0 "Conquer [819.GetName]"
- ETH_unite_ethiopia_harar_trigger:0 "Has a claim on §Y[819.GetName]§!"
- ETH_unite_ethiopia_harar_neighbor_trigger:0 "Any Owned State: neighbors §Y[819.GetName]§!"
- ETH_unite_ethiopia_harar_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[819.Owner.GetName]§!"
+#  ETH_unite_ethiopia_harar:0 "Conquer [819.GetName]"
+#  ETH_unite_ethiopia_harar_trigger:0 "Has a claim on §Y[819.GetName]§!"
+#  ETH_unite_ethiopia_harar_neighbor_trigger:0 "Any Owned State: neighbors §Y[819.GetName]§!"
+#  ETH_unite_ethiopia_harar_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[819.Owner.GetName]§!"
  
- ETH_unite_ethiopia_gibe:0 "Conquer [820.GetName]"
- ETH_unite_ethiopia_gibe_trigger:0 "Has a claim on §Y[820.GetName]§!"
- ETH_unite_ethiopia_gibe_neighbor_trigger:0 "Any Owned State: neighbors §Y[820.GetName]§!"
- ETH_unite_ethiopia_gibe_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[820.Owner.GetName]§!"
+#  ETH_unite_ethiopia_gibe:0 "Conquer [820.GetName]"
+#  ETH_unite_ethiopia_gibe_trigger:0 "Has a claim on §Y[820.GetName]§!"
+#  ETH_unite_ethiopia_gibe_neighbor_trigger:0 "Any Owned State: neighbors §Y[820.GetName]§!"
+#  ETH_unite_ethiopia_gibe_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[820.Owner.GetName]§!"
  
- ETH_unite_ethiopia_oromia:0 "Conquer [271.GetName]"
- ETH_unite_ethiopia_oromia_trigger:0 "Has a claim on §Y[271.GetName]§!"
- ETH_unite_ethiopia_oromia_neighbor_trigger:0 "Any Owned State: neighbors §Y[271.GetName]§!"
- ETH_unite_ethiopia_oromia_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[271.Owner.GetName]§!"
+#  ETH_unite_ethiopia_oromia:0 "Conquer [271.GetName]"
+#  ETH_unite_ethiopia_oromia_trigger:0 "Has a claim on §Y[271.GetName]§!"
+#  ETH_unite_ethiopia_oromia_neighbor_trigger:0 "Any Owned State: neighbors §Y[271.GetName]§!"
+#  ETH_unite_ethiopia_oromia_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[271.Owner.GetName]§!"
  
- ETH_unite_ethiopia_geledi:0 "Conquer [821.GetName]"
- ETH_unite_ethiopia_geledi_trigger:0 "Has a claim on §Y[821.GetName]§!"
- ETH_unite_ethiopia_geledi_neighbor_trigger:0 "Any Owned State: neighbors §Y[821.GetName]§!"
- ETH_unite_ethiopia_geledi_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[821.Owner.GetName]§!"
+#  ETH_unite_ethiopia_geledi:0 "Conquer [821.GetName]"
+#  ETH_unite_ethiopia_geledi_trigger:0 "Has a claim on §Y[821.GetName]§!"
+#  ETH_unite_ethiopia_geledi_neighbor_trigger:0 "Any Owned State: neighbors §Y[821.GetName]§!"
+#  ETH_unite_ethiopia_geledi_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[821.Owner.GetName]§!"
  
- ETH_unite_ethiopia_somaliland:0 "Conquer [559.GetName]"
- ETH_unite_ethiopia_somaliland_trigger:0 "Has a claim on §Y[559.GetName]§!"
- ETH_unite_ethiopia_somaliland_neighbor_trigger:0 "Any Owned State: neighbors §Y[559.GetName]§!"
- ETH_unite_ethiopia_somaliland_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[559.Owner.GetName]§!"
+#  ETH_unite_ethiopia_somaliland:0 "Conquer [559.GetName]"
+#  ETH_unite_ethiopia_somaliland_trigger:0 "Has a claim on §Y[559.GetName]§!"
+#  ETH_unite_ethiopia_somaliland_neighbor_trigger:0 "Any Owned State: neighbors §Y[559.GetName]§!"
+#  ETH_unite_ethiopia_somaliland_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[559.Owner.GetName]§!"
  
- ETH_unite_ethiopia_warsangeli:0 "Conquer [269.GetName]"
- ETH_unite_ethiopia_warsangeli_trigger:0 "Has a claim on §Y[269.GetName]§!"
- ETH_unite_ethiopia_warsangeli_neighbor_trigger:0 "Any Owned State: neighbors §Y[269.GetName]§!"
- ETH_unite_ethiopia_warsangeli_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[269.Owner.GetName]§!"
+#  ETH_unite_ethiopia_warsangeli:0 "Conquer [269.GetName]"
+#  ETH_unite_ethiopia_warsangeli_trigger:0 "Has a claim on §Y[269.GetName]§!"
+#  ETH_unite_ethiopia_warsangeli_neighbor_trigger:0 "Any Owned State: neighbors §Y[269.GetName]§!"
+#  ETH_unite_ethiopia_warsangeli_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[269.Owner.GetName]§!"
  
- ETH_unite_ethiopia_djibouti:0 "Conquer [268.GetName]"
- ETH_unite_ethiopia_djibouti_trigger:0 "Has a claim on §Y[268.GetName]§!"
- ETH_unite_ethiopia_djibouti_neighbor_trigger:0 "Any Owned State: neighbors §Y[268.GetName]§!"
- ETH_unite_ethiopia_djibouti_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[268.Owner.GetName]§!"
+#  ETH_unite_ethiopia_djibouti:0 "Conquer [268.GetName]"
+#  ETH_unite_ethiopia_djibouti_trigger:0 "Has a claim on §Y[268.GetName]§!"
+#  ETH_unite_ethiopia_djibouti_neighbor_trigger:0 "Any Owned State: neighbors §Y[268.GetName]§!"
+#  ETH_unite_ethiopia_djibouti_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[268.Owner.GetName]§!"
  
- ETH_unite_ethiopia_assab:0 "Conquer [983.GetName]"
- ETH_unite_ethiopia_assab_trigger:0 "Has a claim on §Y[983.GetName]§!"
- ETH_unite_ethiopia_assab_neighbor_trigger:0 "Any Owned State: neighbors §Y[983.GetName]§!"
- ETH_unite_ethiopia_assab_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[983.Owner.GetName]§!"
+#  ETH_unite_ethiopia_assab:0 "Conquer [983.GetName]"
+#  ETH_unite_ethiopia_assab_trigger:0 "Has a claim on §Y[983.GetName]§!"
+#  ETH_unite_ethiopia_assab_neighbor_trigger:0 "Any Owned State: neighbors §Y[983.GetName]§!"
+#  ETH_unite_ethiopia_assab_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[983.Owner.GetName]§!"
  
- ETH_unite_ethiopia_eritrea:0 "Conquer [550.GetName]"
- ETH_unite_ethiopia_eritrea_trigger:0 "Has a claim on §Y[550.GetName]§!"
- ETH_unite_ethiopia_eritrea_neighbor_trigger:0 "Any Owned State: neighbors §Y[550.GetName]§!"
- ETH_unite_ethiopia_eritrea_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[550.Owner.GetName]§!"
+#  ETH_unite_ethiopia_eritrea:0 "Conquer [550.GetName]"
+#  ETH_unite_ethiopia_eritrea_trigger:0 "Has a claim on §Y[550.GetName]§!"
+#  ETH_unite_ethiopia_eritrea_neighbor_trigger:0 "Any Owned State: neighbors §Y[550.GetName]§!"
+#  ETH_unite_ethiopia_eritrea_effect:0 "§Y[ROOT.GetName]§! declares war on §Y[550.Owner.GetName]§!"
  
  
  
@@ -418,8 +418,8 @@
  ETH_warm_up_to_egypt_desc:0 "It might be time to get in contact with [EGY.GetName]"
  ETH_exploit_egyption_economic_crises:0 "Exploit [EGY.GetAdjective] Economic Crises"
  ETH_exploit_egyption_economic_crises_desc:0 "We might be able to take advantage of the current [EGY.GetAdjective] economic crises by offering to buy  their vassal [MED.GetName]."
- ETH_exploit_egyption_economic_crises_trigger:0 "§Y[EGY.GetName]§! has mandate over §Y[550.GetName]§!"
- ETH_exploit_egyption_economic_crises_tooltip:0 "\nIf the deal is §Gaccepted§!, a payment plan will be conducted to pay our §ODebt§! of §R200§! §YProsperity§! for purchasing §Y[550.GetName]§!."
+#  ETH_exploit_egyption_economic_crises_trigger:0 "§Y[EGY.GetName]§! has mandate over §Y[550.GetName]§!"
+#  ETH_exploit_egyption_economic_crises_tooltip:0 "\nIf the deal is §Gaccepted§!, a payment plan will be conducted to pay our §ODebt§! of §R200§! §YProsperity§! for purchasing §Y[550.GetName]§!."
  ETH_exploit_egyption_economic_crises_debt_tooltip:0 "\n§R-200§! §YProsperity§!\n"
  ETH_offer_alliance_to_EGY:"Offer An Alliance To [EGY.GetName]"
  ETH_offer_alliance_to_EGY_desc:0 "An alliance between [EGY.GetName] and [ETH.GetName] would assure our combined dominance over the enitre region."
