--- a/localisation/_RCE_edc_africa_l_english.yml
+++ b/localisation/_RCE_edc_africa_l_english.yml
@@ -572,11 +572,11 @@
  boer_states.20.a:0 "Yes, by fire and sword"
  boer_states.20.b:0 "No, We shall not upset the regional balance with war"
  boer_states.21.t:0 "[STL.GetName] declares themselves as an independent state"
- boer_states.21.d:0 "Boer Mercenaries within [1146.GetName] have gained a large tract of land from fighting as mercenaries, and have declared themselves as [STL.GetNameDef]"
+#  boer_states.21.d:0 "Boer Mercenaries within [1146.GetName] have gained a large tract of land from fighting as mercenaries, and have declared themselves as [STL.GetNameDef]"
  boer_states.21.a:0 "Another Boer state?"
  boer_states.21.b:0 "For Stellaland!"
  boer_states.22.t:0 "[GOS.GetName] declares themselves as an independent state"
- boer_states.22.d:0 "More Boer Miners within [1146.GetName] have gained the state of [1067.GetName] from fighting as mercenaries, and have declared themselves as The [GOS.GetNameDef]"
+#  boer_states.22.d:0 "More Boer Miners within [1146.GetName] have gained the state of [1067.GetName] from fighting as mercenaries, and have declared themselves as The [GOS.GetNameDef]"
  boer_states.22.a:0 "Yet another boer state?"
  boer_states.23.t:0 "Ask [STL.GetName] for Integration?"
  boer_states.23.d:0 "We are too small to survive by ourselves, should we ask [STL.GetName] for Annexation?"
@@ -610,15 +610,15 @@
  boer_states.29.d:0 "Our Protectorate of [STL.GetName] has just submitted to [TRV.GetNameDef] against our will, shall we intervene?"
  boer_states.29.a:0 "We will make them submit"
  boer_states.29.b:0 "Back Down"
- boer_states.30.t:0 "[ENG.GetNameDef] Moves Troops into [1148.GetName]"
+#  boer_states.30.t:0 "[ENG.GetNameDef] Moves Troops into [1148.GetName]"
  boer_states.30.d:0 "Early Today [ENG.GetNameDef] moved troops into [1148.GetName], our own sovereign soil."
  boer_states.30.a:0 "We must back down"
  boer_states.30.b:0 "We will fight them back"
- boer_states.31.t:0 "[ENG.GetNameDef] has full control over [1148.GetName]"
+#  boer_states.31.t:0 "[ENG.GetNameDef] has full control over [1148.GetName]"
  boer_states.31.d:0 "We have lost the war against [ENG.GetNameDef] and their Representatives are pushing for peace, should we accept?"
  boer_states.31.a:0 "We accept it"
  boer_states.31.b:0 "We will not surrender"
- boer_states.32.t:0 "[TRV.GetNameDef] has full control over [1148.GetName]"
+#  boer_states.32.t:0 "[TRV.GetNameDef] has full control over [1148.GetName]"
  boer_states.32.d:0 "We have lost the war against [TRV.GetNameDef] and their Representatives are pushing for peace, should we accept?"
  boer_states.32.a:0 "We accept it"
  boer_states.32.b:0 "We shall fight on"
@@ -632,12 +632,12 @@
  boer_states.34.a:0 "Fine, we side with the [OFS.GetName]"
  boer_states.34.b:0 "Fine, we side with the [SOT.GetName]"
  boer_states.35.t:0 "Sign the Treaty?"
- boer_states.35.d.sot:0 "[ENG.GetName] has agreed to arbitrate this conflict and have sent a treaty to us that is pro [SOT.GetNameDef]. if we agree to this [OFS.GetName] must abandon its claims on [779.GetName]"
- boer_states.35.d.ofs:0 "[ENG.GetName] has agreed to arbitrate this conflict and have sent a treaty to us that is pro [OFS.GetNameDef]. if we agree to this [OFS.GetName] will gain [779.GetName]"
+#  boer_states.35.d.sot:0 "[ENG.GetName] has agreed to arbitrate this conflict and have sent a treaty to us that is pro [SOT.GetNameDef]. if we agree to this [OFS.GetName] must abandon its claims on [779.GetName]"
+#  boer_states.35.d.ofs:0 "[ENG.GetName] has agreed to arbitrate this conflict and have sent a treaty to us that is pro [OFS.GetNameDef]. if we agree to this [OFS.GetName] will gain [779.GetName]"
  boer_states.35.a:0 "We Agree"
  boer_states.35.b:0 "We refuse"
  boer_states.36.t:0 "The Treaty is agreed to"
- boer_states.36.d:0 "Both sides have agreed to the treaty over the fate of [779.GetName], and the treaty terms are now being put into action."
+#  boer_states.36.d:0 "Both sides have agreed to the treaty over the fate of [779.GetName], and the treaty terms are now being put into action."
  boer_states.36.a:0 "Finally, everything on this side of the Orange River is ours"
  boer_states.36.b:0 "The Price we must pay for peace"
  boer_states.37.t:0 "The Status Quo"
@@ -667,28 +667,28 @@
  boer_states.42.b:0 "Offer to arbitrate a Treaty"
  ofs_campbell_diamonds:0 "Campbell Diamond mines"
  ofs_national_campbell_diamonds:0 "National Campbell Diamond mines"
- boer_states.51.t:0 "Diamonds Discovered in [1149.GetName]"
- boer_states.51.d:0 "A Large area of diamond mines have been discovered on the banks of the Vaal river within the state of [1149.GetName] and our adminitration there reports a large influx of miners to the area, ready to make themselves (And us) rich"
+#  boer_states.51.t:0 "Diamonds Discovered in [1149.GetName]"
+#  boer_states.51.d:0 "A Large area of diamond mines have been discovered on the banks of the Vaal river within the state of [1149.GetName] and our adminitration there reports a large influx of miners to the area, ready to make themselves (And us) rich"
  boer_states.51.a:0 "This is good news"
- boer_states.52.t:0 "Diamonds Discovered in [1149.GetName]"
- boer_states.52.d:0 "A Large area of diamond mines have been discovered on the banks of the Vaal river within the Disputed state of [1149.GetName]. [OFS.GetNameDef] has moved officals into the area and are attempting to administrate the area, however we have also laid claim to the area."
+#  boer_states.52.t:0 "Diamonds Discovered in [1149.GetName]"
+#  boer_states.52.d:0 "A Large area of diamond mines have been discovered on the banks of the Vaal river within the Disputed state of [1149.GetName]. [OFS.GetNameDef] has moved officals into the area and are attempting to administrate the area, however we have also laid claim to the area."
  boer_states.52.a:0 "Assert our claim"
  boer_states.52.b:0 "The land is rightfully [OFS.GetName] Land"
- boer_states.53.t:0 "The British have taken interest in the [1149.GetName] Diamond Fields"
+#  boer_states.53.t:0 "The British have taken interest in the [1149.GetName] Diamond Fields"
  boer_states.53.d:0 "It seems that the British cape colony territories have taken interest in the diamond mines. Our agent has recommmened that we go to them and submit as a protectorate and have them gain the diamond mines for us"
  boer_states.53.a:0 "Yes, send an envoy to offer [ENG.GetNameDef] control over the state"
  boer_states.53.b:0 "We like our sovereignty, give up the claims"
- boer_states.54.t:0 "[GQW.GetName] offers us the [1149.GetName] Diamond Fields"
- boer_states.54.d:0 "An Agent of the [GQW.GetName] has arrived bearing a request for intergration if we administer the [1149.GetName] Diamond mines"
+#  boer_states.54.t:0 "[GQW.GetName] offers us the [1149.GetName] Diamond Fields"
+#  boer_states.54.d:0 "An Agent of the [GQW.GetName] has arrived bearing a request for intergration if we administer the [1149.GetName] Diamond mines"
  boer_states.54.a:0 "Of Course"
  boer_states.54.b:0 "Their Claims are very shaky, Decline"
- boer_states.55.t:0 "[ENG.GetNameDef] annexes [GQW.GetName] as well as the diamond mines of [1149.GetName]"
- boer_states.55.d:0 "The [ENG.GetName] officially annexed [GQW.GetName] as well as annexing our territory of [1149.GetName] today, dispite our own flags flying above the mines.This is a despicable breach of our soverenty."
+#  boer_states.55.t:0 "[ENG.GetNameDef] annexes [GQW.GetName] as well as the diamond mines of [1149.GetName]"
+#  boer_states.55.d:0 "The [ENG.GetName] officially annexed [GQW.GetName] as well as annexing our territory of [1149.GetName] today, dispite our own flags flying above the mines.This is a despicable breach of our soverenty."
  boer_states.55.a:0 "We cannot go against the might of [ENG.GetNameDef]"
  boer_states.55.b:0 "Assert our rightful Claims"
  boer_states.55.c:0 "This is an act of War!"
- boer_states.56.t:0 "[OFS.GetName] continues to demand the return of [1149.GetName]"
- boer_states.56.d:0 "We have had control of the Kimberly diamond mines within the [1149.GetName] state. however [OFS.GetNameDef] are still claiming soverenty over the land and causing our diplomatic relations to plummit with the nations that are frendly with the [OFS.GetName]."
+#  boer_states.56.t:0 "[OFS.GetName] continues to demand the return of [1149.GetName]"
+#  boer_states.56.d:0 "We have had control of the Kimberly diamond mines within the [1149.GetName] state. however [OFS.GetNameDef] are still claiming soverenty over the land and causing our diplomatic relations to plummit with the nations that are frendly with the [OFS.GetName]."
  boer_states.56.a:0 "Let us send a token monetary recompense"
  boer_states.56.b:0 "Cede the land back"
  britian_accepts_re_annexation:0 "Britain Accepts re-annexation?"
@@ -716,7 +716,7 @@
  ofs_vic_encorage_the_founding_of_a_research_foundation_desc:0 "In order to be a modern state we need a research group or foundation. Let us establish one."
  has_more_than_150k_pop:0 "Has a population higher than §Y150K§!"
  boer_states.72.t:0 "Coal Mines discovered"
- boer_states.72.d:0 "Our prospectors have discovered large coal veins within [778.GetName]"
+#  boer_states.72.d:0 "Our prospectors have discovered large coal veins within [778.GetName]"
  boer_states.72.a:0 "Great"
  boer_states.73.t:0 "Gold discovered"
  boer_states.73.d:0 "Large gold mines have been discovered in or nation, however although much of it out of our reach, the gold we can reach will enrich our nation for years to come."
@@ -864,7 +864,7 @@
  afr_EGY_vic.10.d:0 "Due to the ongoing civil war in [USA.GetNameDef] the worlds Fabric prices have drastically increased. As one of the worlds major fabric exporters this has increased our profits by five times!"
  afr_EGY_vic.10.a:0 "Invest the extra taxes in our government"
  afr_EGY_vic.10.b:0 "Use this to pay off our debt"
- afr_become_industrialised_tooltip:0 "§Y[545.Owner.GetName]§! §Gwill become an industrializing nation!§!"
+#  afr_become_industrialised_tooltip:0 "§Y[545.Owner.GetName]§! §Gwill become an industrializing nation!§!"
  boer_states_company.83.t:0 "[From.GetNameDef] Offers a Company Partnership"
  boer_states_company.83.d:0 "Our Boer neighbor has proposed the idea of forming a Company Partnership between [ROOT.GetName] and [From.GetNameDef]. The partnership would usher in a new era of industrialization, but at the cost of colonial influence. The only question remains, how do we respond?"
  boer_states_company.83.a:0 "Agree, this partnership will bring fourth industrial wonders."
@@ -904,7 +904,7 @@
  ofs_vic_cement_constatution:0 "Cement our Constitution"
  ofs_vic_cement_constatution_desc:0 "Our Constitution is new and untested, let us cement it with more and better defined terms"
  has_more_than_1M_pop:0 "Has more than 1 Million Population"
- OFS_has_dominion_over_rhodesia:0 "Has dominion over [545.GetName]"
+#  OFS_has_dominion_over_rhodesia:0 "Has dominion over [545.GetName]"
  EGY_vic_begin_army_exspansion:0 "Begin Army Expansion"
  EGY_vic_begin_army_exspansion_desc:0 "Begin Army Expansion"
  EGY_vic_army_innovations:0 "Army Innovations"
@@ -1156,14 +1156,14 @@
  eoanb_decision_OFS_western_diplo:0 "Send our Diplomats to [From.GetNameDef]"
  eoanb_decision_OFS_western_diplo_desc:0 "For a long time we have remained isolated from the west, Now it is time to send diplomats to the great powers, [From.GetNameDef] seems likely to reconise us"
  ofs_vic_establish_diplomacy_with_the_west_no_britian:0 "Britain has not accepted our Integration"
- ofs_funding_rhodesian_industrialisation:0 "Funding Industrialization of [545.GetName]"
+#  ofs_funding_rhodesian_industrialisation:0 "Funding Industrialization of [545.GetName]"
  ofs_vic_exspand_influence_north:0 "Expand our influence North"
- ofs_vic_exspand_into_bamangwato:0 "Expand into [841.GetName]"
- ofs_vic_influence_rhodesia:0 "Negotiate a Partnership in [545.GetName]"
- ofs_vic_begin_to_industrialise_rhodesia:0 "Begin to Industrialize [545.GetName]"
- ofs_vic_civilian_industrialistion_rhodesia:0 "Build up [545.GetName]n Civilian Economy"
- ofs_vic_military_industrialistion_rhodesia:0 "Build up [545.GetName]n Military Economy"
- ofs_vic_finish_the_industrialisation_in_rhodesia:0 "Complete [545.GetName]n Industrialization"
+#  ofs_vic_exspand_into_bamangwato:0 "Expand into [841.GetName]"
+#  ofs_vic_influence_rhodesia:0 "Negotiate a Partnership in [545.GetName]"
+#  ofs_vic_begin_to_industrialise_rhodesia:0 "Begin to Industrialize [545.GetName]"
+#  ofs_vic_civilian_industrialistion_rhodesia:0 "Build up [545.GetName]n Civilian Economy"
+#  ofs_vic_military_industrialistion_rhodesia:0 "Build up [545.GetName]n Military Economy"
+#  ofs_vic_finish_the_industrialisation_in_rhodesia:0 "Complete [545.GetName]n Industrialization"
  ofs_recovering_economy:0 "Recovering Economy"
  ofs_recovering_economy_desc:0 "We have recently completed a National Industrialization Project and now our National Economy has to recover from the expansion"
  ofs_vic_encorage_factory_jobs:0 "Encourage Nationalized Factory Jobs"
@@ -1228,20 +1228,20 @@
  arab_events.12.d:0 "Oman, long controlling the coastline of Laristan. Has now sent a envoy demanding the surrender of Laristan to their sphere in return for payment"
  arab_events.12.a:0 "Refuse"
  arab_events.12.b:0 "Hand it over"
- arab_events.18.t:0 "Enforce our will on [559.GetName]?"
+#  arab_events.18.t:0 "Enforce our will on [559.GetName]?"
  arab_events.18.a:0 "Take no chances, Send the troops in"
  arab_events.18.b:0 "Demand the return of the State"
  arab_events.18.c:0 "Demand Vassalization"
- arab_events.18.d:0 "the Rulers within [559.GetName] have long paid tribute to us but now it is the time to consolodate our hold over the region, how shall we proceed?"
+#  arab_events.18.d:0 "the Rulers within [559.GetName] have long paid tribute to us but now it is the time to consolodate our hold over the region, how shall we proceed?"
  arab_events.19.t:0 "Oman Demands Submission"
  arab_events.19.d:0 "A Envoy has arrived from the Sultan of [OMA.GetName] Demanding we return to being their protectorate. What should our response be?"
  arab_events.19.a:0 "Agree"
  arab_events.19.b:0 "Decline"
- arab_events.21.t:0 "Enforce our will on [821.GetName]?"
+#  arab_events.21.t:0 "Enforce our will on [821.GetName]?"
  arab_events.21.a:0 "Take no chances, Send the troops in"
  arab_events.21.b:0 "Demand the return of the State"
  arab_events.21.c:0 "Demand Vassalization"
- arab_events.21.d:0 "the Rulers within [821.GetName] have long paid tribute to us but now it is the time to consolodate our hold over the region, how shall we proceed?"
+#  arab_events.21.d:0 "the Rulers within [821.GetName] have long paid tribute to us but now it is the time to consolodate our hold over the region, how shall we proceed?"
  arab_events.23.t:0 "Our position on [ENG.GetName]?"
  arab_events.23.a:0 "Remain Friendly"
  arab_events.23.b:0 "Become Neutral"
@@ -1280,7 +1280,7 @@
  arab_events.32.a:0 "Use Diplomatic Means"
  arab_events.32.b:0 "Use Military Means"
  arab_events.33.t:0 "[OMA.GetName] is victorious against [MAH.GetName]"
- arab_events.33.d:0 "We have won the war, our forces are fully securing [1196.GetName] for the house of Said"
+#  arab_events.33.d:0 "We have won the war, our forces are fully securing [1196.GetName] for the house of Said"
  arab_events.33.a:0 "Great"
  arab_events.34.t:0 "[MAH.GetName] is victorious against [OMA.GetName]"
  arab_events.34.d:0 "We have lost, the Sultan of [MAH.GetName] has proven himself and is likely to turn to the British. we have lost our chance to take control over §YHadhramaut§! and our position is more precarious among our vassals"
@@ -1583,8 +1583,8 @@
  ofs_vic_army_focus_desc:0 "In order to be a sovereign state, we must establish a trained force to enforce our borders"
  ofs_vic_suppling_our_forces:0 "Suppling Our Forces"
  ofs_vic_suppling_our_forces_desc:0 "in order to supply our army, we must develop supply methods unique to our armed forces due to our position between the vaal and the orange rivers"
- ofs_vic_bring_setsoto_into_our_road_network:0 "Bring [779.GetName] into our road network"
- ofs_vic_bring_setsoto_into_our_road_network_desc:0 "We have finally enforced our borders in [779.GetName] after years of cattle raids and pillaging by [SOT.GetNameDef] Nationals. We can now finally do our governmental duty and bring this land into our infrastructure network"
+#  ofs_vic_bring_setsoto_into_our_road_network:0 "Bring [779.GetName] into our road network"
+#  ofs_vic_bring_setsoto_into_our_road_network_desc:0 "We have finally enforced our borders in [779.GetName] after years of cattle raids and pillaging by [SOT.GetNameDef] Nationals. We can now finally do our governmental duty and bring this land into our infrastructure network"
  ofs_vic_consolidate_power:0 "Consolidate Power (WIP)"
  ofs_vic_consolidate_power_desc:0 "WIP"
  ofs_vic_attempt_to_submit_to_ENG:0 "Attempt to Submit to [ENG.GetName]"
@@ -1596,7 +1596,7 @@
  ofs_vic_prepare_for_re-annexation:0 "Prepare for Re-Annexation"
  ofs_vic_prepare_for_re-annexation_desc:0 "Britain has finally agreed to re-annex us, it is time for us to prepare for the agents of britian to take over our government"
  ofs_vic_native_deals:0 "Native Deals"
- ofs_vic_native_deals_desc:0 "We have recently bought [776.GetName] from [GQE.GetNameDef], it is time to bring this territory into our administration"
+#  ofs_vic_native_deals_desc:0 "We have recently bought [776.GetName] from [GQE.GetNameDef], it is time to bring this territory into our administration"
  ofs_vic_begin_land_deals:0 "Begin more Land Deals"
  ofs_vic_begin_land_deals_desc:0 "In order to grow we have made deals with the native tribes, let us continue this practice"
  ofs_vic_encorage_more_deals:0 "Encourage More Deals"
@@ -2421,7 +2421,7 @@
  egy_debt_system.7.t:0 "Bankruptcy!"
  egy_debt_system.7.d:0 "The nation must declare bankruptcy to the world, as our debt has reached it's limits and we can no longer pay loans back."
  egy_debt_system.7.a:0 "This is terrible!"
- egy_debt_system.7.b:0 "Maybe [ENG.GetName] will forgive our debts if we sell [169.GetName]'s Mining Rights..."
+#  egy_debt_system.7.b:0 "Maybe [ENG.GetName] will forgive our debts if we sell [169.GetName]'s Mining Rights..."
 
  egy_debt_system.9.t:0 "Bankruptcy & Debt Absolved!"
  egy_debt_system.9.d:0 "We are no longer bankrupt and our worries of debt are over!"
