More West Africa States!

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -58,7 +58,7 @@
  STATE_57:0 "Tunis"
  STATE_58:0 "Malta"
  STATE_59:0 "Tlemcen"
- STATE_60:0 "Marrakech"
+ STATE_60:0 "Semmor"
  STATE_61:0 "Western Sahara"
  STATE_62:0 "Mauritania"
  STATE_63:0 "Aden"
@@ -73,7 +73,7 @@
  STATE_72:0 "Gambia"
  STATE_73:0 "Senegal"
  STATE_74:0 "Bissau"
- STATE_75:0 "Kaabu"
+ STATE_75:0 "Soso"
  STATE_76:0 "Canary Islands"
  STATE_77:0 "Khartoum"
  STATE_78:0 "South Aegean Islands"
@@ -211,19 +211,19 @@
  STATE_210:0 "Ouagadougou"
  STATE_211:0 "Yatenga"
  STATE_212:0 "Zanzourgou"
- STATE_213:0 "Labe"
+ STATE_213:0 "Kaabu"
  STATE_214:0 "Faranah"
  STATE_215:0 "Dinguiraye"
  STATE_216:0 "Boundou"
  STATE_217:0 "Nioro"
  STATE_218:0 "Fuladu"
  STATE_219:0 "Kassambara"
- STATE_220:0 "Dscahllon"
+ STATE_220:0 "Boure"
  STATE_221:0 "Bamako"
  STATE_222:0 "Sego"
  STATE_223:0 "Kala"
  STATE_224:0 "Asswanek"
- STATE_225:0 "Bambara"
+ STATE_225:0 "Vassolo"
  STATE_226:0 "Djean"
  STATE_227:0 "Upper Massina"
  STATE_228:0 "Tombo"
@@ -233,48 +233,48 @@
  STATE_232:0 "Taoudenni"
  STATE_233:0 "Araouane"
  STATE_234:0 "Kidai"
- STATE_235:0 "Stavropol"
- STATE_236:0 "Astrakhan"
- STATE_237:0 "Elista"
- STATE_238:0 "Volgodonsk"
- STATE_239:0 "Saratov"
- STATE_240:0 "Belgorod"
- STATE_241:0 "Gomel"
- STATE_242:0 "Smolensk"
- STATE_243:0 "Roslavl"
- STATE_244:0 "Volkhov"
- STATE_245:0 "Millerovo"
- STATE_246:0 "Rzhev"
- STATE_247:0 "Kalinin"
- STATE_248:0 "Yaroslavl"
- STATE_249:0 "Kazan"
- STATE_250:0 "Ulyanovsky"
- STATE_251:0 "Kuibyshev"
- STATE_252:0 "Gorki"
- STATE_253:0 "Ivanovo"
- STATE_254:0 "Ryazan"
- STATE_255:0 "Penza"
- STATE_256:0 "Cheboksary"
- STATE_257:0 "Tambov"
- STATE_258:0 "Lipetsk"
- STATE_259:0 "Poltava"
- STATE_260:0 "Voronezh"
- STATE_261:0 "Ohio"
- STATE_262:0 "Pechora"
- STATE_263:0 "Novgorod"
- STATE_264:0 "Tikhvin"
- STATE_265:0 "Mikhaylovka"
- STATE_266:0 "Tehran"
- STATE_267:0 "Kabul"
- STATE_268:0 "French Somaliland"
- STATE_269:0 "British Somaliland"
- STATE_270:0 "Pitcairn Island"
- STATE_271:0 "Ethiopia"
- STATE_272:0 "Senegal"
- STATE_273:0 "Libyan Desert"
- STATE_274:0 "Ghana"
- STATE_275:0 "Transvaal"
- STATE_276:0 "Southern Ontario"
+ STATE_235:0 "Ceuta"
+ STATE_236:0 "Melilla"
+ STATE_237:0 "Tetouan"
+ STATE_238:0 "Tangiers"
+ STATE_239:0 "Oujda"
+ STATE_240:0 "Figuig"
+ STATE_241:0 "Fes"
+ STATE_242:0 "Rabat"
+ STATE_243:0 "Safi"
+ STATE_244:0 "Marrakech"
+ STATE_245:0 "Ourzazate"
+ STATE_246:0 "Agadir"
+ STATE_247:0 "Rio de Oro"
+ STATE_248:0 "Maghter"
+ STATE_249:0 "Nouadhibou"
+ STATE_250:0 "Traza"
+ STATE_251:0 "Brakna"
+ STATE_252:0 "Wakore"
+ STATE_253:0 "Walata"
+ STATE_254:0 "El Hodh"
+ STATE_255:0 "Saint Louis"
+ STATE_256:0 "Baol"
+ STATE_257:0 "Siine"
+ STATE_258:0 "Saloum"
+ STATE_259:0 "Toro"
+ STATE_260:0 "Jolof"
+ STATE_261:0 "Matam"
+ STATE_262:0 "Ouli"
+ STATE_263:0 "Kian Diara"
+ STATE_264:0 "Toumane"
+ STATE_265:0 "Bouye"
+ STATE_266:0 "Kirdo"
+ STATE_267:0 "Balantes"
+ STATE_268:0 "Soulimana"
+ STATE_269:0 "Falaba"
+ STATE_270:0 "Monrovia"
+ STATE_271:0 "Maryland"
+ STATE_272:0 "Gallinas"
+ STATE_273:0 "Haut Plateau"
+ STATE_274:0 "Mandege"
+ STATE_275:0 "Sankaran"
+ STATE_276:0 "Diallon"
  STATE_277:0 "Mexico City"
  STATE_278:0 "Pampas"
  STATE_279:0 "Santiago"
