Algeria States pt 1

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -275,25 +275,25 @@
  STATE_274:0 "Mandege"
  STATE_275:0 "Sankaran"
  STATE_276:0 "Diallon"
- STATE_277:0 "Mexico City"
- STATE_278:0 "Pampas"
- STATE_279:0 "Santiago"
- STATE_280:0 "Mato Grosso"
- STATE_281:0 "Maldives"
- STATE_282:0 "Kanto"
- STATE_283:0 "Gansu"
- STATE_284:0 "North Island"
- STATE_285:0 "New South Wales"
- STATE_286:0 "Southern Indochina"
- STATE_287:0 "Taklamakan"
- STATE_288:0 "Burma"
- STATE_289:0 "Siam"
- STATE_290:0 "Spanish Africa"
- STATE_291:0 "Baghdad"
- STATE_292:0 "Nejd"
- STATE_293:0 "Yemen"
- STATE_294:0 "Oman"
- STATE_295:0 "Leopoldville"
+ STATE_277:0 "Dekha"
+ STATE_278:0 "Touat"
+ STATE_279:0 "Karsas"
+ STATE_280:0 "Beni Abbas"
+ STATE_281:0 "Bechar"
+ STATE_282:0 "Tanezruft"
+ STATE_283:0 "Arauan"
+ STATE_284:0 "Bourem"
+ STATE_285:0 "In Taboruk"
+ STATE_286:0 "In Zizan"
+ STATE_287:0 "Ahaggar"
+ STATE_288:0 "Tamanrasset"
+ STATE_289:0 "In Salah"
+ STATE_290:0 "Gorara"
+ STATE_291:0 "Boudj El Haouas"
+ STATE_292:0 "Tassili N'Ajjer"
+ STATE_293:0 "El Menia"
+ STATE_294:0 "Ghardalia"
+ STATE_295:0 "El Erg"
  STATE_296:0 "Portuguese Guinea"
  STATE_297:0 "Equatorial Guinea"
  STATE_298:0 "Liberia"
