--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -76,7 +76,7 @@
  STATE_75:0 "Soso"
  STATE_76:0 "Canary Islands"
  STATE_77:0 "Khartoum"
- STATE_78:0 "South Aegean Islands"
+ STATE_78:0 "Crete"
  STATE_79:0 "East Aegean Islands"
  STATE_80:0 "Libyan Desert"
  STATE_81:0 "Sabha"
@@ -294,15 +294,15 @@
  STATE_293:0 "El Menia"
  STATE_294:0 "Ghardalia"
  STATE_295:0 "El Erg"
- STATE_296:0 "Portuguese Guinea"
- STATE_297:0 "Equatorial Guinea"
- STATE_298:0 "Liberia"
- STATE_299:0 "Falkland Islands"
- STATE_300:0 "Uruguay"
- STATE_301:0 "Paraguay"
- STATE_302:0 "La Paz"
- STATE_303:0 "Lima"
- STATE_304:0 "Panamá"
+ STATE_296:0 "Waryla"
+ STATE_297:0 "Touggourt"
+ STATE_298:0 "Laghouat"
+ STATE_299:0 "Brekina"
+ STATE_300:0 "Oran"
+ STATE_301:0 "Algiers"
+ STATE_302:0 "Constantine"
+ STATE_303:0 "Biskarah"
+ STATE_304:0 "Saida"
  STATE_305:0 "Ecuador"
  STATE_306:0 "Cundinamarca"
  STATE_307:0 "Miranda"
