trans saharan highway

--- a/localisation/_RCE_edc_africa_l_english.yml
+++ b/localisation/_RCE_edc_africa_l_english.yml
@@ -797,7 +797,7 @@
  ofs_vic_create_a_national_tax_code:0 "Create a National Tax Code"
  ofs_vic_create_a_national_tax_code_desc:0 "Our economy is completely unbalanced and unregulated, we should establish a proper tax code to stablise our nation and its economy"
  autonomy_khedive:0 "Khedivate"
- autonomy_eyalet:0 "Eyalet"
+ autonomy_ottoman_eyalet:0 "Eyalet"
  egy_sudan_slave_raids:0 "Sudanese Slave Raids"
  EGY_Otto_may_disaprove:0 "§R[OTO.GetNameDef] may intercede§!"
  OTO_allows_EGY_army_expansion:0 "[OTO.GetNameDef] allows [OTO.GetNameDef] army expansion"
@@ -1204,18 +1204,18 @@
  afr_EGY_vic.6.b:0 "Crown Ahmad Rifaat Pasha"
  afr_EGY_vic.6.c:0 "Until a Heir is Found, the regency council must rule"
  arab_events.7.t:0 "[OMA.GetName] Declares Intention to reclaim Colonial territory"
- arab_events.7.d:0 "For many years [OMA.GetName] has been in decline, resulting in the loss of much of it's colonial holdings including Our Colony of [TCS.GetNameDef] and the Slow decline of its hold over [ZAN.GetNameDef]. However in a incredible turnaround the [OMA.GetNameDef] Government has regained it's hold over [ZAN.GetNameDef] and has declared its intentions to reclaim the lands it has lost."
- arab_events.7.a:0 "Send a Warning to keep out of the [TCS.GetNameDef]"
+ arab_events.7.d:0 "For many years [OMA.GetName] has been in decline, resulting in the loss of much of it's colonial holdings including Our Colony of [ABHGetNameDef] and the Slow decline of its hold over [ZAN.GetNameDef]. However in a incredible turnaround the [OMA.GetNameDef] Government has regained it's hold over [ZAN.GetNameDef] and has declared its intentions to reclaim the lands it has lost."
+ arab_events.7.a:0 "Send a Warning to keep out of the [ABH.GetNameDef]"
  arab_events.7.b:0 "India Requires our Attention right now"
  arab_events.8.t:0 "[ENG.GetName] issues warning"
- arab_events.8.d:0 "A diplomat from [ENG.GetName] warns us to stay away from the [TCS.GetName]"
+ arab_events.8.d:0 "A diplomat from [ENG.GetName] warns us to stay away from the [ABHGetName]"
  arab_events.8.a:0 "Ok"
  arab_events.9.t:0 "Colonial policy towards old Arabian Territories"
  arab_events.9.d:0 "Much of our Territories in Arabia are under control by [ENG.GetNameDef]. how do you want to approch our claims to them?"
  arab_events.9.a:0 "Maintain Our Claims"
- arab_events.9.b:0 "Demand return of [TCS.GetNameDef] territories"
- arab_events.9.c:0 "the [TCS.GetNameDef] are lost to us"
- arab_events.10.t:0 "[OMA.GetName] Demands [TCS.GetName]"
+ arab_events.9.b:0 "Demand return of [ABH.GetNameDef] territories"
+ arab_events.9.c:0 "the [ABH.GetNameDef] are lost to us"
+ arab_events.10.t:0 "[OMA.GetName] Demands [ABH.GetName]"
  arab_events.10.d:0 "A diplomat from the resurgent [OMA.GetNameDef] has arrived to demand the return of the trucial states. [OMA.GetName] may be small but thier navy may prevent supplies arriving to our forces keeping the peace in india"
  arab_events.10.b:0 "Return the land, it is useless anyway"
  arab_events.10.a:0 "Refuse"
@@ -1609,10 +1609,10 @@
  oma_vic_continue_isolation_desc:0 "Our colonial time is over, let us begin a policy of isolation"
  oma_vic_enforce_will_on_mahra:0 "Enforce Will on Mahra"
  oma_vic_enforce_will_on_mahra_desc:0 "We have historically had a lot of influence over the region of Mahra, let us now integrate them into our growing empire"
- oma_vic_demand_TCS:0 "Demand [TCS.GetName]"
- oma_vic_demand_TCS_desc:0 "The British ignored our demand in the past, now we are in a even greater position let us demand the submission of [TCS.GetNameDef] governor directly"
- oma_vic_intergrate_TCS:0 "Integrate [TCS.GetName]"
- oma_vic_intergrate_TCS_desc:0 "The [TCS.GetName] was once under our direct control, let us make it so again"
+ oma_vic_demand_TCS:0 "Demand [ABHGetName]"
+ oma_vic_demand_TCS_desc:0 "The British ignored our demand in the past, now we are in a even greater position let us demand the submission of [ABHGetNameDef] governor directly"
+ oma_vic_intergrate_TCS:0 "Integrate [ABHGetName]"
+ oma_vic_intergrate_TCS_desc:0 "The [ABHGetName] was once under our direct control, let us make it so again"
  SAF_CC_reformism:0 "Cape Colony"
  SAF_CC_traditionalism:0 "Cape Colony"
  SAF_CC_social_egalitarianism:0 "Cape Colony"
