--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -235,3 +235,7 @@
  KAG:0 "Kel Ahaggar"
  KAG_DEF:0 "Kel Ahaggar"
  KAG_ADJ:0 "Kel Ahaggar"
+
+ TGR:0 "Touggourt"
+ TGR_DEF:0 "Touggourt"
+ TGR_ADJ:0 "Chaoui"
